# brave-core

.storybook/: locale.ts
app/: brave_generated_resources.grd
browser/: BUILD.gn  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  browser_context_keyed_service_factories.cc
browser/extensions/: brave_component_loader.cc  brave_wallet_apitest.cc
browser/extensions/api/: brave_wallet_api.cc  brave_wallet_api.h
browser/infobars/: crypto_wallets_infobar_delegate.cc
browser/ui/: BUILD.gn
browser/ui/webui/: brave_new_tab_message_handler.cc  brave_rewards_page_ui.cc  brave_webui_source.cc
browser/ui/webui/new_tab_page/: new_tab_page_branded_view_counter.cc  new_tab_page_branded_view_counter.h
chromium_src/chrome/browser/browsing_data/: chrome_browsing_data_remover_delegate.cc
chromium_src/extensions/browser/: declarative_user_script_master.cc
common/: pref_names.cc  pref_names.h
common/extensions/api/: _api_features.json  brave_wallet.json
components/brave_ads/browser/: ads_service.h  ads_service_impl.cc  ads_service_impl.h  ads_service_impl_unittest.cc
components/brave_ads/common/: pref_names.cc  pref_names.h
components/brave_new_tab_ui/: storage.ts
components/brave_new_tab_ui/actions/: new_tab_actions.ts
components/brave_new_tab_ui/api/: brandedWallpaper.ts
components/brave_new_tab_ui/components/default/brandedWallpaper/: logo-style.ts  logo.tsx
components/brave_new_tab_ui/components/default/rewards/: brandedWallpaperNotification.tsx  index.tsx  style.ts
components/brave_new_tab_ui/constants/: new_tab_types.ts
components/brave_new_tab_ui/containers/newTab/: index.tsx
components/brave_new_tab_ui/reducers/: new_tab_reducer.tsx
components/brave_new_tab_ui/stories/default/: index.tsx
components/brave_rewards/browser/: rewards_database.cc  rewards_database.h  rewards_service_impl.cc  rewards_service_impl.h
components/brave_rewards/browser/database/: database_contribution_info.cc  database_contribution_info.h  publisher_info_database.cc  publisher_info_database.h
components/common/: locale.ts
components/definitions/: newTab.d.ts
components/ntp_sponsored_images/: BUILD.gn  locale_helper.cc  locale_helper.h  locale_helper_linux.cc  locale_helper_linux.h  locale_helper_mac.h  locale_helper_mac.mm  locale_helper_win.cc  locale_helper_win.h  ntp_sponsored_images_component_manager.cc  switches.cc  switches.h
components/resources/: brave_components_resources.grd  brave_components_strings.grd
components/services/bat_ads/: bat_ads_client_mojo_bridge.cc  bat_ads_client_mojo_bridge.h  bat_ads_impl.cc
components/services/bat_ads/public/cpp/: ads_client_mojo_bridge.cc  ads_client_mojo_bridge.h
components/services/bat_ledger/: bat_ledger_client_mojo_proxy.cc  bat_ledger_client_mojo_proxy.h
extensions/browser/: BUILD.gn  brave_extension_user_script_loader.cc  brave_extension_user_script_loader.h  web3_provider_extension_observer.h  web3_provider_extension_registry.cc  web3_provider_extension_registry.h  web3_provider_extension_registry_factory.cc  web3_provider_extension_registry_factory.h
patches/: chrome-VERSION.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.cc.patch  chrome-browser-resources-downloads-BUILD.gn.patch  chrome-browser-resources-tools-rollup_plugin.js.patch
test/: BUILD.gn
ui/webui/resources/: BUILD.gn
ui/webui/resources/br_elements/: BUILD.gn
ui/webui/resources/br_elements/br_toolbar/: BUILD.gn
(+6 files in other folders)
