import("//brave/components/brave_wallet/browser/buildflags/buildflags.gni")

source_set("browser") {
  visibility = [ "//extensions/browser:browser_sources" ]

  sources = [
    "brave_extensions_browser_client.cc",
    "brave_extensions_browser_client.h",
  ]

  if (brave_wallet_enabled) {
    sources += [
      "brave_extension_user_script_loader.cc",
      "brave_extension_user_script_loader.h",
      "web3_provider_extension_observer.h",
      "web3_provider_extension_registry.cc",
      "web3_provider_extension_registry.h",
      "web3_provider_extension_registry_factory.cc",
      "web3_provider_extension_registry_factory.h",
    ]
  }

  deps = [
    "//base",
  ]
}
